--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "simple-calculator",
-  "version": "1.0.0",
-  "description": "A simple calculator with Typescript , Node.js and Inquirer",
-  "main": "index.js",
+  "name": "f3x-simple-calculator",
+  "version": "1.0.1",
+  "description": "",
+  "main": "calculator.js",
   "type": "module",
+  "bin": "calculator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
